--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <div id="container">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+    
     <script src="rps.js"></script>
        
 </body>
